# graphclaw

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  skills-lock.json
.agents/refs/: graph-concept-ref.md
.cursor/plans/: master-graphclaw-plan_9f4aa08b.plan.md
.github/: CONTEXT.md
.github/ISSUE_TEMPLATE/: CONTEXT.md
.github/codeql/: CONTEXT.md
.github/workflows/: CONTEXT.md  checks-on-pr.yml  ci-run.yml  cross-platform-build-manual.yml  release-beta-on-push.yml  release-stable-manual.yml
.learnings/: LEARNINGS.md
benches/: CONTEXT.md
crates/: CONTEXT.md
crates/memgraph/: CONTEXT.md  Cargo.toml
crates/memgraph/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
crates/robot-kit/: CONTEXT.md
crates/sets/: CONTEXT.md  Cargo.toml
crates/views/: CONTEXT.md  Cargo.toml
crates/views/src/: error.rs  export.rs  lib.rs  service.rs  types.rs
deploy/: CONTEXT.md
dev/: CONTEXT.md
docs/: CONTEXT.md  README.md  playground-demo-scenario.md
examples/: CONTEXT.md
firmware/: CONTEXT.md
fuzz/: CONTEXT.md
memgraph/: .memgraph.env.example  .memlab.env.example  CONTEXT.md  docker-compose.yml  init-admin.cypherl  memgraph.conf  seed-playground-demo.cypherl
python/: CONTEXT.md
scripts/: CONTEXT.md
src/: CONTEXT.md  agent-package-import-binding.map.json
tests/: CONTEXT.md
ui/: CONTEXT.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/: CONTEXT.md  package.json  pnpm-lock.yaml  vite.config.ts
(+452 files in other folders)
