[package]
name = "memgraph"
version = "0.1.0"
edition = "2021"
description = "Low-level Memgraph graph backend for GraphClaw (Bolt protocol)"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "net", "time", "rt"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
rsmgclient = "3.0.0"
