[package]
name = "views"
version = "0.1.0"
edition = "2021"
description = "View composition and resolution for GraphClaw (ViewTemplate, BoundView, ResolvedView, LLM export)"
license = "MIT OR Apache-2.0"

[dependencies]
memgraph = { path = "../memgraph" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync"] }
async-trait = "0.1.89"
async-recursion = "1.1.1"
